--- a/package.json
+++ b/package.json
@@ -14,14 +14,25 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-camera-roll/camera-roll": "^5.0.2",
+    "@react-native-community/netinfo": "^9.3.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@stream-io/flat-list-mvcp": "^0.10.2",
     "expo": "~46.0.9",
     "expo-asset": "~8.6.1",
+    "expo-av": "~12.0.4",
     "expo-constants": "~13.2.4",
+    "expo-document-picker": "^10.3.0",
+    "expo-file-system": "^14.1.0",
     "expo-font": "~10.2.0",
+    "expo-haptics": "^11.3.0",
+    "expo-image-manipulator": "^10.4.0",
+    "expo-image-picker": "^13.3.1",
     "expo-linking": "~3.2.2",
+    "expo-media-library": "^14.2.0",
+    "expo-sharing": "^10.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
@@ -29,9 +40,20 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-document-picker": "^8.1.1",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-haptic-feedback": "^1.14.0",
+    "react-native-image-crop-picker": "^0.38.0",
+    "react-native-image-resizer": "^1.4.5",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-share": "^7.9.0",
+    "react-native-svg": "^13.1.0",
+    "react-native-web": "~0.18.7",
+    "stream-chat": "^7.1.0",
+    "stream-chat-expo": "^5.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
